--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,40 @@ jobs:
       - run: yarn build
       - save-cache: *save-cache
 
+  Web Platform Tests:
+    docker:
+      - image: circleci/node:8-browsers
+    steps:
+      - checkout
+      - restore-cache: *restore-cache
+      - *install
+      - run: yarn build:umd
+      - *cypress-dependencies-install
+      - restore-cache:
+          keys:
+            - v5-tests-web-platform-dependencies-{{ .Branch }}-{{ checksum "tests/web-platform/yarn.lock" }}
+            # Fallback in case checksum fails
+            - v5-tests-web-platform-dependencies-{{ .Branch }}-
+      - run:
+           command: yarn install --no-progress
+           working_directory: tests/web-platform
+      - run:
+           command: yarn start
+           background: true
+           working_directory: tests/web-platform
+      - run: npx wait-on http://localhost:3000
+      - run:
+           command: yarn test
+           working_directory: tests/web-platform
+      - store_test_results:
+          path: tests/web-platform/junit
+      - store_artifacts:
+          path: tests/web-platform/cypress/screenshots
+      - save-cache:
+          paths:
+            - tests/web-platform/node_modules
+          key: v5-tests-web-platform-dependencies-{{ .Branch }}-{{ checksum "tests/web-platform/yarn.lock" }}
+
   Semantic Release:
     docker:
       - image: circleci/node:8
@@ -57,10 +91,12 @@ workflows:
     jobs:
       - Typecheck
       - Build
+      - Web Platform Tests
       - Semantic Release:
           requires:
             - Typecheck
             - Build
+            - Web Platform Tests
           filters:
             branches:
               only:
