--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "version": "2.0.0-dev",
   "main": "index.js",
+  "module": "es/index.js",
   "files": [
     "compute.js",
     "es",
@@ -45,6 +46,7 @@
     "eslint-config-prettier": "2.9.0",
     "eslint-plugin-import": "2.11.0",
     "eslint-plugin-react": "7.7.0",
+    "flowgen": "1.2.1",
     "husky": "0.14.3",
     "lint-staged": "7.1.0",
     "prettier": "1.12.1",
@@ -118,7 +120,6 @@
       "git add"
     ]
   },
-  "module": "es/index.js",
   "prettier": {
     "semi": false,
     "singleQuote": true,
