fix(quirksmode): use document.scrollingElement when avilable (#235)
* Importing w3c resources

* Setup new testing system

* Sync with Prettier

* Revert "Sync with Prettier"

This reverts commit 7799b6df2a6d2268daa5b6d66d3349ecef71be4b.

* retry

* Sync with Prettier

* rewrite tests

* fix up first test

* update test

* test workaround

* fix up test

* fix quirksmode

* cleanup

* cleanup

* use minified bundle to detect mangle problems

* nah

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 # Cypress stuff
 **/cypress/screenshots
 **/cypress/videos
+**/junit
 
 # Typescript stuff
 typings
@@ -15,3 +16,4 @@ es
 umd
 /compute.js
 /index.js
+/types.js
