--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 before_script:
 - cd tests/web-platform && yarn start &
 script:
-- npx nightwatch
+- ./node_modules/.bin/nightwatch
 addons:
   browserstack:
     username: stiandidriksen2
