chore(ci): setup browserstack to test Safari and other problematic browsers (#238)
* starting initial setup

* nightwatch works

* trying travis

* try another nvm

* try again

* fix cwd issue

* still trying

* retry

* retry

* retry

* such a pain in the ass

* getting really tired with fighting this crap

* and again

* test browserstack on circleci

* working on it

* setup tests

* let us test

* run more tests

* test more devices

* drop travis

* hum

* add edge

* support common capabilities

* let's debug

* see if tests can fail on bs

* fix waitForExists error

* run more tests

* extract test assertion results directly

* temp disable other browsers to save trial minutes

* test safari instead of IE

* lock safari version

* test summary

* test better nesting

* debug json parsing

* debug

* quick test

* guard

* test the report

* harden

* there

* keep testing

* test again

* test

* ahem

* hm

* another test

* test

* ug

* again and again

* include ff

* test again

* agaaaain

* 😭

* cleanup

* add project name

* get info

* add badge

* remove the bins

* fix up

* test

* test another

* extend timeout

* run the border test as well

* cleanup

* better

* stop using assert

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -76,6 +76,40 @@ jobs:
             - tests/web-platform/node_modules
           key: v5-tests-web-platform-dependencies-{{ .Branch }}-{{ checksum "tests/web-platform/yarn.lock" }}
 
+  Browserstack:
+    docker:
+      - image: circleci/node:8
+    steps:
+      - checkout
+      - restore-cache: *restore-cache
+      - *install
+      - run: yarn build:umd
+      - restore-cache:
+          keys:
+            - v5-tests-web-platform-dependencies-{{ .Branch }}-{{ checksum "tests/web-platform/yarn.lock" }}
+            # Fallback in case checksum fails
+            - v5-tests-web-platform-dependencies-{{ .Branch }}-
+      - run:
+           command: yarn install --no-progress
+           working_directory: tests/web-platform
+      - run:
+           command: yarn start
+           background: true
+           working_directory: tests/web-platform
+      - run: npx wait-on http://localhost:3000
+      - run:
+           command: yarn browserstack
+           working_directory: tests/web-platform
+      - store_test_results:
+          path: tests/web-platform/tests_output
+      - store_artifacts:
+          path: tests/web-platform/errorShots
+      - save-cache:
+          paths:
+            - tests/web-platform/node_modules
+          key: v5-tests-web-platform-dependencies-{{ .Branch }}-{{ checksum "tests/web-platform/yarn.lock" }}
+
+
   Semantic Release:
     docker:
       - image: circleci/node:8
@@ -93,11 +127,13 @@ workflows:
       - Typecheck
       - Build
       - Web Platform Tests
+      - Browserstack
       - Semantic Release:
           requires:
             - Typecheck
             - Build
             - Web Platform Tests
+            - Browserstack
           filters:
             branches:
               only:
