--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "rollup-plugin-replace": "2.0.0",
     "rollup-plugin-terser": "1.0.1",
     "semantic-release": "15.5.0",
+    "tslint": "5.10.0",
+    "tslint-config-prettier": "1.13.0",
     "typescript": "2.8.3"
   },
   "keywords": [
