--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,10 @@
     "declarationDir": "typings",
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
-    "strictNullChecks": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "alwaysStrict": true,
+    "strict": true,
     "lib": ["es5", "es2015.promise", "dom"]
   },
   "exclude": [
