--- a/package.json
+++ b/package.json
@@ -86,11 +86,8 @@
   "bundlesize": [
     {
       "path": "./umd/scroll-into-view-if-needed.min.js",
-      "maxSize": "1.75 kB"
-    },
-    {
-      "path": "./umd/scroll-into-view-if-needed.js",
-      "maxSize": "3 kB"
+      "maxSize": "3 kB",
+      "compression": "none"
     }
   ],
   "lint-staged": {
