fix: scrollbars & block/inline:center, safari & window scrolling with custom behavior and bundlesize reduction (#319)
* Remove visualViewport stuff

Revisit if necessary

* Run chrome on browserstack

* run tests on electron

* how about now

* visualViewport is required to not break pinch-zooming

* try chrome again

* ok we have to use chrome for now

* quick test

* simplify viewport logic

* micro optim not worth it

* retry

* unnecessary check removed

* refactor looping logic

* refactor out viewport file

* prepare more optimization in main loop

* optimize further by alloc vars

* reveeeeert

* reduce canOverflow overhead

* remove duplicate logic

* shadow doom

* fix shadowdom

* TS error

* This needs to be refined

* Ensure scrolling happens within bounds

* Better scrollbar support

* fix border test

* cleanup logic

* cleaner

* Test a switch case

* Revert "Test a switch case"

This reverts commit e3619d709d7d826686aebd4bb809f2dea5bd231d.

* unify logic flow

* unifying more logic

* optimize further

* simplify and minimize even more

* reduce test count to avoid hitting bs limit

* swap map to for loop

* optimize if-needed logic

* quick test

* measure size in a more predictable way

* small test

* another small size test

* replace property accessors

* shave off a few more bytes

* ok one more

* ok don't break IE

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "compute.js",
     "es",
     "typings",
-    "umd",
-    "viewport.js"
+    "umd"
   ],
   "scripts": {
     "prebuild": "yarn clean",
@@ -86,7 +85,7 @@
   "bundlesize": [
     {
       "path": "./umd/scroll-into-view-if-needed.min.js",
-      "maxSize": "4 kB",
+      "maxSize": "3 kB",
       "compression": "none"
     }
   ],
