pause new releases temporarily

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,7 +117,8 @@ jobs:
       - checkout
       - restore-cache: *restore-cache
       - *install
-      - run: npx semantic-release
+      # @TODO re-enable when done with the sequence of fixes
+      #- run: npx semantic-release
 
 # Workflows enables us to run multiple jobs in parallel
 workflows:
