chore: bump deps that cause node-gyp errors

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scroll-into-view-if-needed",
   "description": "Ponyfill for upcoming Element.scrollIntoView() APIs like scrollMode: if-needed, behavior: smooth and block: center",
   "license": "MIT",
-  "author": "Stian Didriksen",
+  "author": "Cody Olsen",
   "homepage": "https://scroll-into-view-if-needed.netlify.com",
   "repository": {
     "type": "git",
@@ -35,14 +35,14 @@
     "compute-scroll-into-view": "1.0.11"
   },
   "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/plugin-external-helpers": "7.2.0",
-    "@babel/preset-env": "7.3.1",
-    "@babel/preset-typescript": "7.1.0",
-    "babel-eslint": "10.0.1",
-    "babel-plugin-add-module-exports": "1.0.0",
-    "babel-plugin-dev-expression": "0.2.1",
+    "@babel/cli": "7.7.7",
+    "@babel/core": "7.7.7",
+    "@babel/plugin-external-helpers": "7.7.4",
+    "@babel/preset-env": "7.7.7",
+    "@babel/preset-typescript": "7.7.7",
+    "babel-eslint": "10.0.3",
+    "babel-plugin-add-module-exports": "1.0.2",
+    "babel-plugin-dev-expression": "0.2.2",
     "concurrently": "4.1.0",
     "eslint": "4.19.1",
     "eslint-config-prettier": "4.0.0",
