--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "prepublishOnly": "unset npm_config_cafile && yarn build",
     "typecheck": "tsc --noEmit && tsc --noEmit -p tests/typescript"
   },
+  "sideEffects": false,
+  "typings": "typings/index.d.ts",
   "dependencies": {
     "compute-scroll-into-view": "^1.0.12"
   },
@@ -138,6 +140,5 @@
     "prepare": [
       "@semantic-release/npm"
     ]
-  },
-  "typings": "typings/index.d.ts"
+  }
 }
