--- a/renovate.json
+++ b/renovate.json
@@ -1,18 +1,7 @@
 {
   "extends": [
-    "config:js-lib",
-    "github>finn-no/renovate-presets:js",
-    ":automergeDigest",
-    ":automergePatch",
-    ":automergeRequireAllStatusChecks",
-    ":prHourlyLimit1",
-    ":semanticCommits",
-    ":pinDigestsDisabled",
-    ":maintainLockFilesWeekly"
+    "github>stipsan/renovate-presets:auto"
   ],
-  "devDependencies": {
-    "extends": ":automergeMajor"
-  },
   "packageRules": [
     {
       "paths": ["tests/**"],
