--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "es5",
     "overrides": [
       {
         "files": ".babelrc",
@@ -66,39 +65,38 @@
     ]
   },
   "dependencies": {
-    "compute-scroll-into-view": "^1.0.17"
+    "compute-scroll-into-view": "^1.0.20"
   },
   "devDependencies": {
-    "@babel/cli": "7.17.10",
-    "@babel/core": "7.17.10",
-    "@babel/plugin-external-helpers": "7.16.7",
-    "@babel/preset-env": "7.17.10",
-    "@babel/preset-typescript": "7.16.7",
+    "@babel/cli": "^7.17.10",
+    "@babel/core": "^7.17.10",
+    "@babel/plugin-external-helpers": "^7.16.7",
+    "@babel/preset-env": "^7.17.10",
+    "@babel/preset-typescript": "^7.16.7",
     "@sanity/semantic-release-preset": "^2.0.2",
-    "babel-eslint": "10.1.0",
-    "babel-plugin-add-module-exports": "1.0.4",
-    "babel-plugin-dev-expression": "0.2.3",
-    "concurrently": "6.5.1",
-    "eslint": "8.14.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-react": "7.29.4",
-    "flowgen": "1.19.0",
-    "husky": "7.0.4",
-    "lint-staged": "12.4.1",
-    "prettier": "2.6.2",
+    "babel-eslint": "^10.1.0",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-plugin-dev-expression": "^0.2.3",
+    "concurrently": "^6.5.1",
+    "eslint": "^8.14.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.29.4",
+    "flowgen": "^1.19.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.8.0",
     "prettier-plugin-packagejson": "^2.3.0",
-    "rimraf": "3.0.2",
-    "rollup": "2.71.1",
-    "rollup-plugin-babel": "4.4.0",
-    "rollup-plugin-commonjs": "10.1.0",
-    "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-replace": "2.2.0",
-    "rollup-plugin-terser": "7.0.2",
-    "semantic-release": "17.4.7",
-    "tslint": "5.20.1",
-    "tslint-config-prettier": "1.18.0",
-    "typescript": "4.6.4"
+    "rimraf": "^3.0.2",
+    "rollup": "^2.71.1",
+    "rollup-plugin-babel": "^4.4.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-replace": "^2.2.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "tslint": "^5.20.1",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.6.4"
   },
   "bundlesize": [
     {
