chore: use cross-env for windows

--- a/package.json
+++ b/package.json
@@ -35,11 +35,11 @@
   "scripts": {
     "prebuild": "npm run clean",
     "build": "npm run build:d.ts && npm run build:cjs && npm run build:es && npm run build:umd && npm run build:umd.min",
-    "build:cjs": "BABEL_ENV=cjs babel src -d . --extensions '.ts'",
+    "build:cjs": "cross-env BABEL_ENV=cjs babel src -d . --extensions '.ts'",
     "build:d.ts": "tsc --emitDeclarationOnly",
-    "build:es": "BABEL_ENV=es babel src -d es --extensions '.ts'",
-    "build:umd": "BABEL_ENV=umd NODE_ENV=development rollup -c -f umd -o umd/scroll-into-view-if-needed.js",
-    "build:umd.min": "BABEL_ENV=umd NODE_ENV=production rollup -c -f umd -o umd/scroll-into-view-if-needed.min.js",
+    "build:es": "cross-env BABEL_ENV=es babel src -d es --extensions '.ts'",
+    "build:umd": "cross-env BABEL_ENV=umd NODE_ENV=development rollup -c -f umd -o umd/scroll-into-view-if-needed.js",
+    "build:umd.min": "cross-env BABEL_ENV=umd NODE_ENV=production rollup -c -f umd -o umd/scroll-into-view-if-needed.min.js",
     "clean": "rimraf 'umd' 'es' 'typings'",
     "dev": "concurrently 'tsc --noEmit --watch' 'tsc --noEmit -p tests/typescript --watch' 'npm run build:cjs --watch' 'npm run build:es --watch' 'npm run build:umd --watch' 'npm run build:umd.min --watch'",
     "lint": "eslint ./integration-examples",
@@ -78,6 +78,7 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-plugin-dev-expression": "^0.2.3",
     "concurrently": "^6.5.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
