fix: build node compatible ESM

--- a/.gitignore
+++ b/.gitignore
@@ -10,14 +10,10 @@ node_modules
 selenium-debug.log
 
 # Typescript stuff
-typings
 src/*.js
 
 lerna-debug.log
 .next
-dist
-es
-umd
-/index.js
-/types.js
 tests/web-platform/local.log
+.vscode
+dist
